@@ -7,8 +7,9 @@
     <epp:phrase id="document_typename_application/pdf">PDF</epp:phrase>
     <epp:phrase id="document_typename_application/postscript">Postscript</epp:phrase>
     <epp:phrase id="document_typename_text/plain">Plain Text</epp:phrase>
-    <epp:phrase id="document_typename_application/vnd.ms-powerpoint">MS PowerPoint</epp:phrase>
-    <epp:phrase id="document_typename_application/msword">MS Word</epp:phrase>
+    <epp:phrase id="document_typename_application/vnd.ms-powerpoint">Microsoft PowerPoint</epp:phrase>
+    <epp:phrase id="document_typename_application/vnd.ms-excel">Microsoft Excel</epp:phrase>
+    <epp:phrase id="document_typename_application/msword">Microsoft Word</epp:phrase>
     <epp:phrase id="document_typename_image/jpeg">Image (JPEG)</epp:phrase>
     <epp:phrase id="document_typename_image/png">Image (PNG)</epp:phrase>
     <epp:phrase id="document_typename_image/gif">Image (GIF)</epp:phrase>
